--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "lint": "./node_modules/.bin/eslint",
     "check-lint": "lint [0-9]*.js",
-    "start-server": "nodemon --exec babel-node --presets @babel/preset-env ./server.js",
     "start-worker": "nodemon --exec babel-node --presets @babel/preset-env ./worker.js",
-    "dev": "nodemon --exec babel-node --presets @babel/preset-env",
-    "test": "mocha --require @babel/register --exit"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "mocha --exit"
   },
   "author": "",
   "license": "ISC",
