--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start-worker": "nodemon --exec babel-node --presets @babel/preset-env ./worker.js",
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "mocha --exit"
+    "test": "mocha tests/**/*.test.js --exit"
   },
   "author": "",
   "license": "ISC",
@@ -36,7 +36,7 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^22.17.0",
-    "mocha": "^6.2.2",
+    "mocha": "^6.2.3",
     "nodemon": "^2.0.2",
     "request": "^2.88.0",
     "sinon": "^7.5.0"
