--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
   "main": "index.js",
   "scripts": {
     "lint": "./node_modules/.bin/eslint",
-    "check-lint": "lint [0-9]*.js",
+    "check-lint": "npm run lint -- *.js",
+    "lint:fix": "npm run lint -- . --fix",
+    "start-server": "nodemon --exec babel-node --presets @babel/preset-env ./server.js",
     "start-worker": "nodemon --exec babel-node --presets @babel/preset-env ./worker.js",
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "mocha tests/**/*.test.js --exit"
+    "dev": "nodemon --exec babel-node --presets @babel/preset-env",
+    "test": "mocha --require @babel/register --exit 'tests/**/*.js'"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bull": "^3.16.0",
-    "chai-http": "^4.3.0",
     "express": "^4.17.1",
     "image-thumbnail": "^1.0.10",
     "mime-types": "^2.1.27",
@@ -31,11 +31,12 @@
     "@babel/preset-env": "^7.8.2",
     "@babel/register": "^7.8.0",
     "chai": "^4.5.0",
-    "chai-http": "^4.3.0",
-    "eslint": "^6.4.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^22.17.0",
+    "chai-http": "^4.4.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jest": "^22.21.0",
+    "eslint-plugin-mocha": "^10.5.0",
     "mocha": "^6.2.3",
     "nodemon": "^2.0.2",
     "request": "^2.88.0",
