--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bull": "^3.16.0",
+    "expect": "^29.7.0",
     "express": "^4.17.1",
     "image-thumbnail": "^1.0.10",
     "mime-types": "^2.1.27",
     "mongodb": "^3.5.9",
     "redis": "^2.8.0",
     "sha1": "^1.1.1",
+    "supertest": "^7.0.0",
     "uuid": "^8.2.0"
   },
   "devDependencies": {
