--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "basic-auth": "^2.0.1",
     "bcrypt": "^5.1.1",
     "bull": "^3.16.0",
     "expect": "^29.7.0",
